--- a/ECommerce.CatalogueAPI.DAL/ECommerce.CatalogueAPI.DAL.csproj
+++ b/ECommerce.CatalogueAPI.DAL/ECommerce.CatalogueAPI.DAL.csproj
@@ -16,8 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ECommerce.CatalogueAPI.Common\ECommerce.CatalogueAPI.Common.csproj" />
     <ProjectReference Include="..\ECommerce.Common\ECommerce.csproj" />
-    <ProjectReference Include="..\ECommerce.IdentityAPI.Common\ECommerce.IdentityAPI.Common.csproj" />
   </ItemGroup>
 
 </Project>
