--- a/ECommerce.Common/ECommerce.csproj
+++ b/ECommerce.Common/ECommerce.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ECommerce.CatalogueAPI.Common\ECommerce.CatalogueAPI.Common.csproj" />
+  </ItemGroup>
+
 </Project>
