Implemented authorization attributes, policies and completed JWT authentication for IdentityAPI. Removed obsolete projects.

--- a/ECommerce.CatalogueAPI.DAL/ECommerce.CatalogueAPI.DAL.csproj
+++ b/ECommerce.CatalogueAPI.DAL/ECommerce.CatalogueAPI.DAL.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ECommerce.CatalogueAPI.Common\ECommerce.CatalogueAPI.Common.csproj" />
-    <ProjectReference Include="..\ECommerce.Common\ECommerce.csproj" />
+    <ProjectReference Include="..\ECommerce\ECommerce.csproj" />
   </ItemGroup>
 
 </Project>
