--- a/ECommerce.IdentityAPI.DAL/ECommerce.IdentityAPI.DAL.csproj
+++ b/ECommerce.IdentityAPI.DAL/ECommerce.IdentityAPI.DAL.csproj
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ECommerce.Common\ECommerce.csproj" />
     <ProjectReference Include="..\ECommerce.IdentityAPI.Common\ECommerce.IdentityAPI.Common.csproj" />
+    <ProjectReference Include="..\ECommerce\ECommerce.csproj" />
   </ItemGroup>
 
 </Project>
