--- a/ECommerce.CatalogueAPI.BL/ECommerce.CatalogueAPI.BL.csproj
+++ b/ECommerce.CatalogueAPI.BL/ECommerce.CatalogueAPI.BL.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NUnit.Runners" Version="3.12.0" />
+    <PackageReference Include="OpenCover" Version="4.7.1221" />
+    <PackageReference Include="ReportGenerator" Version="5.1.21" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ECommerce.CatalogueAPI.DAL\ECommerce.CatalogueAPI.DAL.csproj" />
   </ItemGroup>
 
