--- a/ECommerce.CatalogueAPI.Testing/ECommerce.CatalogueAPI.Testing.csproj
+++ b/ECommerce.CatalogueAPI.Testing/ECommerce.CatalogueAPI.Testing.csproj
@@ -12,9 +12,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit.Runners" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="OpenCover" Version="4.7.1221" />
+    <PackageReference Include="ReportGenerator" Version="5.1.21" />
   </ItemGroup>
 
   <ItemGroup>
