- Added missing dependency injections for EcommerceContext and JwtService. - Implemented Options pattern for loading appsettings.json in both WebAPIs. - Implemented CatalogueController.AuthenticateUser. - Added exp claim for JWT. - Implemented Alexei's suggestions. - Refactoring.

--- a/ECommerce.CatalogueAPI.WebAPI/ECommerce.CatalogueAPI.WebAPI.csproj
+++ b/ECommerce.CatalogueAPI.WebAPI/ECommerce.CatalogueAPI.WebAPI.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="OpenCover" Version="4.7.1221" />
     <PackageReference Include="ReportGenerator" Version="5.1.21" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <InternalsVisibleTo Include="$(Assembly).IntegrationTesting"/>
   </ItemGroup>
 
   <ItemGroup>
