--- a/ECommerce.IdentityAPI.Common/ECommerce.IdentityAPI.Common.csproj
+++ b/ECommerce.IdentityAPI.Common/ECommerce.IdentityAPI.Common.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove=".cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ECommerce\ECommerce.csproj" />
   </ItemGroup>
 
