--- a/ECommerce.CatalogueAPI.WebAPI/appsettings.json
+++ b/ECommerce.CatalogueAPI.WebAPI/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "UrlECommerceIdentityApi": "https://localhost:7057/api/User/"
+
+  "CurrentRegionAlpha3Code": "GER",
+  "UrlECommerceIdentityApi": "https://localhost:7057/api/User/",
+  "ConnectionStrings": {
+    "ECommerceConnString": "Data Source=PAVLE-PC\\SQLSERVER2016;Initial Catalog=ECommerce;TrustServerCertificate=True;User ID=sa;Password=1234"
+  }
 }
