--- a/ECommerce.IdentityAPI.WebAPI/appsettings.json
+++ b/ECommerce.IdentityAPI.WebAPI/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "JwtSettings": {
-    "SecretKey": "VWJlckdpZ2FTZWtyZXRLbGp1YyM5MTg4MTMxMDI0MSE="
-  },
-  "ConnectionStrings": {
-    "ECommerceConnString": "Data Source=PAVLE-PC\\SQLSERVER2016;Initial Catalog=ECommerce;TrustServerCertificate=True;User ID=sa;Password=1234"
-  }
+  "AllowedHosts": "*"
 }
